[gd_scene load_steps=59 format=2]

[ext_resource path="res://Anims/Guards/Sed/dwiz/knightSedW5.png" type="Texture" id=1]
[ext_resource path="res://Anims/Guards/Sed/dwiz/knightSedW1.png" type="Texture" id=2]
[ext_resource path="res://Anims/Guards/Sed/dwiz/knightSedW3.png" type="Texture" id=3]
[ext_resource path="res://Anims/Guards/Sed/dwiz/knightSedW2.png" type="Texture" id=4]
[ext_resource path="res://Anims/Guards/Sed/dwiz/knightSedW4.png" type="Texture" id=5]
[ext_resource path="res://Anims/Guards/Sed/dwiz/knightSedW6.png" type="Texture" id=6]
[ext_resource path="res://metal-gear-rising-ost-the-only-thing-i-know-for-real_444559330.mp3" type="AudioStream" id=7]
[ext_resource path="res://Game/Characters/Area_For_Starting_Fight.gd" type="Script" id=8]
[ext_resource path="res://qn8kKPkSkEQZWgQvA51oyOlYDY7q2bpXbJ3vHAoDKF0LAEPf76eC6TI3XxkAOgtpDiPgueiaHTQfywcbq8OV_4R4.jpg" type="Texture" id=9]
[ext_resource path="res://Game/Characters/Sed.gd" type="Script" id=10]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie5.png" type="Texture" id=11]
[ext_resource path="res://Anims/Guards/Sed/УдарЩитом/knightSedShitYdar5.png" type="Texture" id=12]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit12.png" type="Texture" id=13]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit16.png" type="Texture" id=14]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit18.png" type="Texture" id=15]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit7.png" type="Texture" id=16]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit1.png" type="Texture" id=17]
[ext_resource path="res://Anims/Guards/Sed/УдарЩитом/knightSedShitYdar1.png" type="Texture" id=18]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie2.png" type="Texture" id=19]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit3.png" type="Texture" id=20]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit10.png" type="Texture" id=21]
[ext_resource path="res://Anims/Guards/Sed/УдарЩитом/knightSedShitYdar3.png" type="Texture" id=22]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie8.png" type="Texture" id=23]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie1.png" type="Texture" id=24]
[ext_resource path="res://Anims/Guards/Sed/УдарЩитом/knightSedShitYdar4.png" type="Texture" id=25]
[ext_resource path="res://Anims/Guards/Sed/УдарЩитом/knightSedShitYdar2.png" type="Texture" id=26]
[ext_resource path="res://Anims/Guards/Sed/УдарЩитом/knightSedShitYdar6.png" type="Texture" id=27]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie3.png" type="Texture" id=28]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit13.png" type="Texture" id=29]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit14.png" type="Texture" id=30]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie11.png" type="Texture" id=31]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie10.png" type="Texture" id=32]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie6.png" type="Texture" id=33]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit9.png" type="Texture" id=34]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit6.png" type="Texture" id=35]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit2.png" type="Texture" id=36]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit4.png" type="Texture" id=37]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie12.png" type="Texture" id=38]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit8.png" type="Texture" id=39]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit5.png" type="Texture" id=40]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit11.png" type="Texture" id=41]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie4.png" type="Texture" id=42]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit17.png" type="Texture" id=43]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie9.png" type="Texture" id=44]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie13.png" type="Texture" id=45]
[ext_resource path="res://Anims/Guards/Sed/Сковывание/knightSedSkovivanie7.png" type="Texture" id=46]
[ext_resource path="res://Anims/Guards/Sed/Щит/knightSedShit15.png" type="Texture" id=47]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 11.5 )

[sub_resource type="Animation" id=2]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, 0, -8, 0, -8, 22, -1, 22, -1, 14, 0, 14, 0, 22, 6, 22, 6, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "щгп"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.16, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 14, -1, 14, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 14, 8, 14, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 42 ), ExtResource( 11 ), ExtResource( 33 ), ExtResource( 46 ), ExtResource( 23 ), ExtResource( 44 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 38 ), ExtResource( 45 ) ],
"loop": false,
"name": "chaining",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle_shield",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 18 ) ],
"loop": false,
"name": "shield_punch",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 36 ), ExtResource( 20 ), ExtResource( 37 ), ExtResource( 40 ), ExtResource( 35 ), ExtResource( 16 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 21 ), ExtResource( 41 ), ExtResource( 13 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 47 ), ExtResource( 14 ), ExtResource( 43 ), ExtResource( 15 ) ],
"loop": false,
"name": "stance_shield",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 109, 53.5 )

[sub_resource type="Animation" id=6]
resource_name = "EXTRA"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 31, 14 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 26, 33.75 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1.25, 10.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2, 10 )

[node name="Sed" type="KinematicBody2D"]
position = Vector2( 314, 191 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 10 )

[node name="Area_For_Stop_Machine" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_For_Stop_Machine"]
position = Vector2( -1, 4.5 )
shape = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.645767, -6.08 )
scale = Vector2( 0.3, 1 )
polygon = PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 14, 0, 14, 0, 22, 8, 22, 8, -8 )
one_way_collision_margin = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionPolygon2D"]
reset_on_save = false
anims/RESET = SubResource( 2 )
"anims/щгп" = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.07996, -1.08002 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "idle"

[node name="health_Enemy_1" type="TextureProgress" parent="."]
margin_left = -21.0
margin_top = -34.0
margin_right = 124.0
margin_bottom = -13.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 150.0
value = 150.0
texture_progress = ExtResource( 9 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="mana_Enemy_1" type="TextureProgress" parent="."]
margin_left = -21.0
margin_top = -29.0
margin_right = 124.0
margin_bottom = -8.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 250.0
value = 250.0
texture_progress = ExtResource( 9 )
tint_progress = Color( 0, 0.133333, 1, 1 )
nine_patch_stretch = true

[node name="value_of_health" type="Label" parent="."]
margin_left = -8.82999
margin_top = -35.08
margin_right = 19.17
margin_bottom = 12.92
rect_scale = Vector2( 0.5, 0.5 )
text = "500

"

[node name="value_of_mana" type="Label" parent="."]
margin_left = -8.82999
margin_top = -29.08
margin_right = 31.17
margin_bottom = 18.92
rect_scale = Vector2( 0.5, 0.5 )
text = "250

"

[node name="Trigger_Area" type="Area2D" parent="."]
position = Vector2( 0.170013, -7.08 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_Area"]
position = Vector2( 1, -21.5 )
scale = Vector2( 1.3, 1 )
shape = SubResource( 5 )
one_way_collision_margin = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.170013, -7.08 )

[node name="Timer_Of_Stun" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="RayCastHorizontal_1" type="RayCast2D" parent="."]
position = Vector2( 0, -35 )
enabled = true
cast_to = Vector2( 19, 0 )
collision_mask = 2097152

[node name="RayCastHorizontal_2" type="RayCast2D" parent="."]
position = Vector2( 0.170013, -13.08 )
enabled = true
cast_to = Vector2( 19, 0 )
collision_mask = 2097152

[node name="RayCastHorizontal_3" type="RayCast2D" parent="."]
position = Vector2( -4.32134e-07, 7 )
enabled = true
cast_to = Vector2( 3, 0 )
collision_mask = 0

[node name="RayCastHorizontal_4" type="RayCast2D" parent="."]
position = Vector2( -4.32134e-07, -23 )
enabled = true
cast_to = Vector2( 19, 0 )
collision_mask = 2097152

[node name="RayCastHorizontal_For_Heroe" type="RayCast2D" parent="."]
position = Vector2( -4.32134e-07, 2 )
enabled = true
cast_to = Vector2( 192, 0 )

[node name="RayCastVertical" type="RayCast2D" parent="."]
position = Vector2( 11, 1 )
enabled = true
cast_to = Vector2( 0, 22 )
collision_mask = 4194304

[node name="RayCastVertical_2" type="RayCast2D" parent="."]
position = Vector2( 0.170013, -13.08 )
enabled = true
cast_to = Vector2( 0, -26 )
collision_mask = 2097152

[node name="RayCastVertical_3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 2097152

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EXTRA = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 10.0
navigation_layers = 16

[node name="Area_For_Starting_Fight" type="Area2D" parent="."]
visible = false
scale = Vector2( 0.7, 1 )
collision_layer = 17
collision_mask = 17
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_For_Starting_Fight"]
shape = SubResource( 8 )
disabled = true

[node name="Timer_Stop_Machine" type="Timer" parent="."]
wait_time = 0.3

[node name="Timer_For_Updaiting_Way" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Timer_For_Going_Back" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer_Chaining" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Timer_Shield_Punch" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( -1.07996, -1.08002 )
scale = Vector2( 2, 2 )

[node name="Timer_For_Stun" type="Timer" parent="."]
one_shot = true

[node name="For_Status_Bars" type="Node2D" parent="."]
position = Vector2( -2, -43 )

[node name="Shield_Punch" type="Area2D" parent="."]
position = Vector2( 18, -6 )
scale = Vector2( 0.7, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield_Punch"]
position = Vector2( 0, -12.25 )
shape = SubResource( 9 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.75, -3.5 )
shape = SubResource( 10 )

[node name="AreaOfEnemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfEnemy"]
position = Vector2( -1, 6 )
shape = SubResource( 11 )

[node name="Timers" type="Node2D" parent="."]

[node name="Timer_Of_HP" type="Timer" parent="Timers"]
autostart = true

[node name="Timer_Of_Mana" type="Timer" parent="Timers"]
autostart = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Trigger_Area" to="." method="_on_Trigger_Area_body_entered"]
[connection signal="timeout" from="Timer_Of_Stun" to="." method="_on_Timer_Of_Stun_timeout"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="timeout" from="Timer_Stop_Machine" to="." method="_on_Timer_Stop_Machine_timeout"]
[connection signal="timeout" from="Timer_For_Updaiting_Way" to="." method="_on_Timer_For_Updaiting_Way_timeout"]
[connection signal="timeout" from="Timer_For_Going_Back" to="." method="_on_Timer_For_Going_Back_timeout"]
[connection signal="timeout" from="Timer_Chaining" to="." method="_on_Timer_Chaining_timeout"]
[connection signal="timeout" from="Timer_Shield_Punch" to="." method="_on_Timer_Shield_Punch_timeout"]
[connection signal="body_entered" from="Shield_Punch" to="." method="_on_Shield_Punch_body_entered"]
[connection signal="timeout" from="Timers/Timer_Of_HP" to="." method="_on_Timer_Of_HP_timeout"]
[connection signal="timeout" from="Timers/Timer_Of_Mana" to="." method="_on_Timer_Of_Mana_timeout"]
